jiraID:MAR-9007, fix overflow

--- a/ThreeSixtyOneView/app/styles/scss/scenario_templates.scss
+++ b/ThreeSixtyOneView/app/styles/scss/scenario_templates.scss
@@ -95,11 +95,9 @@
 			@include reveal-animation();
 		}
 		.content-container {
+			overflow-y: auto;
+			overflow-x: hidden;
 			@include vendor(height, calc(100% - 60px));
-			overflow {
-				x: hidden;
-				y: auto;
-			}
 			.header {
 				font: {
 					size: 38px;
